Actualización del frontend y Service Worker

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo-celu.png" />
+    <link rel="icon" type="image/png" href="/logo-celu.png" />
+    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet">
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#112D55" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#112D55" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gondoleando</title>
   </head>
